--- a/lesson4/www/index.html
+++ b/lesson4/www/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8" />
 	<title>how to use webapck</title>
+	<link rel="stylesheet" type="text/css" href="css/bundle.css" />
 </head>
 <body>
 	<div id="app"></div>
-	<script src="bundle.js"></script>
+	<script src="js/bundle.js"></script>
 </body>
 </html>
