fixed weixin style

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+<meta name="apple-mobile-web-app-capable" content="yes">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="no-cache">
 <meta http-equiv="Expires" content="-1">
@@ -12,6 +13,7 @@
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="dest/search.css">
 <script type="text/javascript" src="js/flexible.js"></script>
+<script type="text/javascript" src="js/scroll.js"></script>
 </head>
 
 <body>
@@ -22,7 +24,7 @@
             </div>
             <div class="search-box">
                 <span class="zoom-icon"></span>
-                <input type="search" value="奶粉" />
+                <input type="text" value="奶粉" />
             </div>
             <div class="right-box">筛选</div>
         </header>
