--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -14,13 +14,14 @@
 <link rel="stylesheet" href="dest/search.css">
 <script type="text/javascript" src="js/flexible.js"></script>
 <script type="text/javascript" src="js/scroll.js"></script>
+<script src="http://192.168.2.113:8080/target/target-script-min.js#anonymous"></script>
 </head>
 
 <body>
     <div class="box">
         <header class="header"> 
             <div class="left-box">
-                <div class="back-icon"></div>
+                <span class="back-icon"></span>
             </div>
             <div class="search-box">
                 <span class="zoom-icon"></span>
