--- a/demo16/index.html
+++ b/demo16/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/assets/bundle.js"></script>
   </body>
 </htmL>
