--- a/demo18/index.html
+++ b/demo18/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>hotload</title>
-	<link rel="stylesheet" href="assets/bundle.css">
-	<script src="assets/bundle.js"></script>
+	<link rel="stylesheet" href="http://localhost:8080/assets/bundle.css">
+	<script src="http://localhost:8080/assets/bundle.js"></script>
 </head>
 <body>
 	<div id="app"></div>
